--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -59,8 +59,8 @@ jobs:
           TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
         with:
-          tagName: app-v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version.
-          releaseName: 'App v__VERSION__'
+          tagName: app-${{github.ref_name}} # the action automatically replaces \_\_VERSION\_\_ with the app version.
+          releaseName: 'App ${{github.ref_name}}'
           releaseBody: 'See the assets to download this version and install.'
           releaseDraft: true
           prerelease: false
